--- a/app/views/paypal_accounts/index.haml
+++ b/app/views/paypal_accounts/index.haml
@@ -55,24 +55,18 @@
     - else
       - content_for :javascript do
         ST.initializeNewPaypalAccountHandler("ask_paypal_permissions", "#{order_permission_action}", ".js-paypal-redirect-change-account");
-      .row.paypal-wizard
-        .col-12
-          .paypal-wizard-content
-            .row
-              .col-12
-                %h3.paypal-wizard-step-complete
-                  = t("paypal_accounts.paypal_account_all_set_up")
+      .payment-info
+        .row
+          .col-12
+            %h2
+              Hooray, everything is set up!
             .row
               .col-12
                 =t("paypal_accounts.can_receive_payments")
             .row.paypal-first-steps-list
               .col-12
-                =icon_tag("check", ["icon-fix", "paypal-success-mark"])
+                %i.icon-check
                 =t("paypal_accounts.paypal_account_connected_summary", :email => paypal_account_email)
-            .row.paypal-last-steps-list
-              .col-12
-                =icon_tag("check", ["icon-fix", "paypal-success-mark"])
-                =t("paypal_accounts.paypal_permission_granted_summary")
             .row.paypal-link-wrapper
               .col-12
                 %a.paypal-change-link#ask_paypal_permissions
