--- a/app/views/homepage/_grid_item.haml
+++ b/app/views/homepage/_grid_item.haml
@@ -8,5 +8,5 @@
       .home-fluid-thumbnail-grid-listing-info
         .home-fluid-thumbnail-grid-author     
           - name = PersonViewUtils::person_entity_display_name(listing.author, @current_community.name_display_type)
-          = link_to(person_path(username: listing.author.username), :class => "home-fluid-thumbnail-grid-author-name", title: name) do
+          = link_to(person_path(username: listing.author.username), :class => "home-fluid-thumbnail-grid-author-name", title: name,:rel => 'nofollow') do
             = name
