--- a/app/views/homepage/index.haml
+++ b/app/views/homepage/index.haml
@@ -41,13 +41,14 @@
 
             = icon_tag("dropdown", ["icon-dropdown"])
         #home-toolbar-categories-menu.toggle-menu
-          = link_to t("homepage.filters.all_categories"), search_path(params.merge({category: "all"}))
+          = link_to t("homepage.filters.all_categories"), marketplace_category_path(category: "all")
           - @main_categories.each do |category|
-            = link_to category.display_name(I18n.locale), search_path(params.merge({category: category}))
+            = search_path(params.merge({category: category}))
+            = link_to category.display_name(I18n.locale), marketplace_category_path(category: category)
             - if category.children
               - category.children.each do |child|
                 - is_selected = @selected_category == child
-                = link_to child.display_name(I18n.locale), search_path(params.merge({category: child})), :class => "toggle-menu-subitem"
+                = link_to child.display_name(I18n.locale), marketplace_category_path(category: child), :class => "toggle-menu-subitem"
 
       / Filters
       .hidden-tablet
