--- a/app/views/layouts/_header_menu.haml
+++ b/app/views/layouts/_header_menu.haml
@@ -8,9 +8,9 @@
     = icon_map_tag(icons, "new_listing", ["icon-with-text"])
     = t("homepage.index.post_new_listing")
 
-  = link_to about_infos_path do
-    = icon_map_tag(icons, "information", ["icon-with-text"])
-    = t("header.about")
+  / = link_to about_infos_path do
+  /   = icon_map_tag(icons, "information", ["icon-with-text"])
+  /   = t("header.about")
 
   = link_to new_user_feedback_path do
     = icon_map_tag(icons, "feedback", ["icon-with-text"])
