--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -27,11 +27,9 @@
           %a
             How it works
         %li
-          %a
-            Privacy
+          = link_to "Privacy Policy", privacy_about_path
         %li
-          %a
-            Terms of use
+          = link_to "Terms of Service", privacy_terms_path
     .col-3
       %h4
         Contact
