--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -29,7 +29,7 @@
         %li
           = link_to "Privacy Policy", privacy_about_path
         %li
-          = link_to "Terms of Service", privacy_terms_path
+          = link_to "Terms of Service", terms_about_path
     .col-3
       %h4
         Contact
