--- a/app/assets/stylesheets/views/_listings.css.scss
+++ b/app/assets/stylesheets/views/_listings.css.scss
@@ -237,12 +237,15 @@ $listing-author-avatar-height: 108;
 .benefits-banner {
   background: $menu-background;
   .col-4 {
-    padding: lines(0.5);
+    padding: 2em 0;
     h1 {
       font-size: 6em;
     }
     h1,h2,p,h6{
       color: white;
+    }
+    h2 {
+      margin-bottom: 0;
     }
     p {
       width: 50%;
