--- a/app/assets/stylesheets/blog.css.scss
+++ b/app/assets/stylesheets/blog.css.scss
@@ -1,13 +1,36 @@
-.post-card {
+// Place all the styles related to the blog controller here.
+// They will automatically be included in application.css.
+// You can use Sass (SCSS) here: http://sass-lang.com/
+div.wrapper {
   background: #fff;
-  border: 1px solid #ddd;
-  .summary {
-    padding: 0.5em;
-  }
-  .categories {
-    padding: 0 0.5em;
-  }
-  img {
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+  border: 1px solid #e7e7e7;
+  border-top: 0;
+  border-bottom: 0;
+  padding: 0;
+  
+}
+.blog-post-main-image {
+
+  width: 100%;
+  background-size: 100% auto;
+  height: 300px;
+  background-position: top;
+  background-repeat: no-repeat;
+  &:before {
+    position: absolute;
     width: 100%;
+    top: 0;
+    content: '';
+    display: block;
+    background: -webkit-gradient(linear,left top,right top,color-stop(0,rgba(33,33,33,.5)),color-stop(100%,rgba(33,33,33,0)));
+    background: -webkit-linear-gradient(left,rgba(33,33,33,.5),rgba(33,33,33,0));
+    background: linear-gradient(90deg,rgba(33,33,33,.5) 0,rgba(33,33,33,0));
+    background: linear-gradient(90deg,rgba(33,33,33,.5) 0,rgba(33,33,33,0));
+    background-blend-mode: multiply;  
   }
+
+}
+.blog-post {
+  padding: 0.75em;
 }
