--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -2208,3 +2208,95 @@ figure.fluidratio {
   }
 }
 
+.hero {
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+  position: relative;
+  top: 0;
+  display: block;
+  width: 100%;
+  height: 380px;
+  h1, a, h2, h3, h4, p {
+    color: white;
+
+  }
+
+  .hero-navigation {
+    .row {
+      @include clear-wrapper;
+    }
+    z-index: 3;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    padding: 20px 0 10px;
+    background: -webkit-gradient(linear,left top,left bottom,color-stop(0,rgba(33,33,33,.8)),color-stop(100%,rgba(33,33,33,0)));
+    background: -webkit-linear-gradient(top,rgba(33,33,33,.8),rgba(33,33,33,0));
+    background: linear-gradient(180deg,rgba(33,33,33,.8) 0,rgba(33,33,33,0));
+    h1 {
+      font-weight: 500;
+      display: inline-block;
+      border-bottom: 1px solid #fff;
+      font-size: 1.4em;
+    }
+  }
+  .hero-feature-image, .hero-feature-image:before {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+  }
+  .hero-feature-image {
+    overflow: hidden;
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .hero-feature-image:before {
+    content: '';
+    display: block;
+    background: -webkit-gradient(linear,left top,right top,color-stop(0,rgba(33,33,33,.5)),color-stop(100%,rgba(33,33,33,0)));
+    background: -webkit-linear-gradient(left,rgba(33,33,33,.5),rgba(33,33,33,0));
+    background: linear-gradient(90deg,rgba(33,33,33,.5) 0,rgba(33,33,33,0));
+    background-blend-mode: multiply;
+  }
+  .feature-post {
+
+    a.feature-title {
+      &:hover {
+        color: $button
+      }
+    }
+    .feature-title {
+      font-family: Georgia;
+      font-weight: bolder;
+      font-size: 3rem;
+    }
+    max-width: 63em;
+    margin: 0 auto;
+    position: relative;
+    top: 80%;
+    &.with-header {
+      top: 50%;
+    }
+    width: 100%;
+    color: #fff;
+    text-shadow: 0 2px 8px rgba(33,33,33,.8);
+    small {
+      text-shadow: none;
+    }
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    -webkit-transition: all .3s ease-in-out 0s;
+    transition: all .3s ease-in-out 0s;
+    opacity: 1;
+    box-sizing: border-box;
+    z-index: 1;
+    .row {
+      @include clear-wrapper;
+    }
+  }
+}
+
