--- a/app/views/news/index.haml
+++ b/app/views/news/index.haml
@@ -4,7 +4,7 @@
     .row
       %h1
         Tack Hunter News
-  .feature-post.with-header
+  .feature-post
     .row
       .col-12
         = link_to @featured_post.title.capitalize, news_path(@featured_post), class: "feature-title"
