--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -2209,7 +2209,6 @@ figure.fluidratio {
 }
 
 .hero {
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
   position: relative;
   top: 0;
   display: block;
@@ -2262,6 +2261,51 @@ figure.fluidratio {
     background: linear-gradient(90deg,rgba(33,33,33,.5) 0,rgba(33,33,33,0));
     background-blend-mode: multiply;
   }
+  .hero-footer{
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    .hero-footer-title {
+      h1 {
+        float: left;
+        color: #1d1d1d;
+        font-size: 3rem;
+        font-spacing: 1px;
+        font-family: Georgia;
+        font-weight: lighter;
+        margin: 0;
+      }
+      .hero-social-links {
+        padding: 1em 0;
+
+        float: right;
+        a {
+          color: $button;
+          font-size: 1.5rem;
+          float: right;
+          margin-left: 0.5em;
+        }
+      }
+    }
+    .hero-meta-header {
+      width: 100%;
+      padding: 0 0 0.75em 0;
+      .hero-published-on {
+        float: left;
+      }
+      a {
+        color: #1091e7;
+      }
+
+    }
+    .row {
+      @include clear-wrapper;
+      background: #fff;
+      max-width: 63em;
+      border: 1px solid #ddd;
+      border-bottom: 0;
+    }
+  }
   .feature-post {
 
     a.feature-title {
@@ -2277,10 +2321,7 @@ figure.fluidratio {
     max-width: 63em;
     margin: 0 auto;
     position: relative;
-    top: 80%;
-    &.with-header {
-      top: 50%;
-    }
+    top: 50%;
     width: 100%;
     color: #fff;
     text-shadow: 0 2px 8px rgba(33,33,33,.8);
