--- a/app/assets/stylesheets/news_post.css.scss
+++ b/app/assets/stylesheets/news_post.css.scss
@@ -1,27 +1,13 @@
 .wrapper {
   background: #fff;
+  color: rgb(68, 68, 68);
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
   border: 1px solid #ddd;
-  border-top: none;
-  color: rgb(68, 68, 68);
+  border-top: 0;
 }
 
 .news-post {
-  .news-post-meta-header {
-    width: 100%;
-    padding: 0.75em 0;
-    border-bottom: 1px solid #ddd;
-    .news-post-published-on {
-      float: left;
-    }
-    .news-post-social-links {
-      color: #ddd;
-      a {
-        float: right;
-        margin-left: 0.5em;
-      }
-    }
-  }
+  
   .news-post-content {
     margin-top: 2em;
     .center {
