--- a/app/views/news/articles/_sunshirt_showdown.haml
+++ b/app/views/news/articles/_sunshirt_showdown.haml
@@ -72,7 +72,7 @@
           Price
         %td
           $65
-%div{style: "width: 80%; margin: auto; background: #f7f7f7; padding:0.5em; border-radius: 4px;"}
+%div{style: "background: #f7f7f7; padding:0.5em; border-radius: 4px;"}
   %strong 
     About me: 
   .row
