--- a/app/assets/stylesheets/news_post.css.scss
+++ b/app/assets/stylesheets/news_post.css.scss
@@ -9,7 +9,7 @@
 .news-post {
   
   .news-post-content {
-    margin-top: 2em;
+    padding-top: 2em;
     .center {
       text-align: center;
     }
