--- a/app/assets/stylesheets/mixins/default-colors.scss
+++ b/app/assets/stylesheets/mixins/default-colors.scss
@@ -66,8 +66,8 @@ $cover-photo-url: "cover_photos/original/cover_photo_large.jpeg";
 $small-cover-photo-url: "cover_photos/header/default.jpg";
 $wide-logo-lowres-url: "logos/header/logo-wide.png";
 $wide-logo-highres-url: "logos/header/logo-wide.png";
-$square-logo-lowres-url: "";
-$square-logo-highres-url: "";
+$square-logo-lowres-url: "https://assets.tackhunter.com/logos/TackHunter_Small_Logo.jpg";
+$square-logo-highres-url: "https://assets.tackhunter.com/logos/TackHunter_Small_Logo.jpg";
 $cover-photo-height: 453;
 $cover-photo-mobile-height: 365;
 $small-cover-photo-height: 96;
