--- a/app/views/news/articles/_sunshirt_showdown.haml
+++ b/app/views/news/articles/_sunshirt_showdown.haml
@@ -10,7 +10,7 @@
 .row
   .col-4
     .img-card
-      %img{src: "https://4.bp.blogspot.com/-2nxye8DmBuQ/Vfcq5NYLKXI/AAAAAAAAFmQ/v2aw7Jc-Nf0_c22HpDBLVB0FvlW2YASKQ/s320/IMG_4472.JPG"}
+      %img{src: "https://assets.tackhunter.com/news/EIS_COOL_Shirt.JPG"}
       %h3
         EIS COOL Shirt
     %table{style: "margin-top: 0.5em;"}
@@ -31,7 +31,7 @@
           $86
   .col-4
     .img-card
-      %img{src: "https://4.bp.blogspot.com/-NO7yjBZ0WEs/VwxeCNEI4MI/AAAAAAAAJn8/qK_ZFqlwiXQpXhPjOvXluJYQqaOGd7OXwCLcB/s320/CV--KrkWEAAl5wS.jpg"}
+      %img{src: "https://assets.tackhunter.com/news/Kastel-Denmark-Charlotte-Shirt.jpg"}
       %h3
         Kastel Denmark Charlotte Shirt
     %table{style: "margin-top: 0.5em;"}
@@ -53,7 +53,7 @@
 
   .col-4
     .img-card
-      %img{src: "https://4.bp.blogspot.com/-dPkOm4Nyzvs/VwxekNbrLGI/AAAAAAAAJoA/4mbnlau2XswAOTHoqT7SDXMR0a175Rrjw/s320/CJjJLKLWoAAlzsi.jpg"}
+      %img{src: "https://assets.tackhunter.com/news/Tailored-Sportsman-Ice-Fil-Shirt.jpg"}
       %h3
         Tailored Sportsman Ice-Fil Shirt
     %table{style: "margin-top: 0.5em;"}
