--- a/app/views/news/index.haml
+++ b/app/views/news/index.haml
@@ -17,7 +17,7 @@
     .row
       .col-12
         = link_to "Read Now", news_path(@featured_post), class: "button"
-  .hero-feature-image{style: "background-image: url('https://s3.amazonaws.com/assets.tackhunter.com/logos/images/communities/cover_photos/26619/hd_header/AdobeStock_90047375.jpeg')"}
+  .hero-feature-image{style: "background-image: url('#{@featured_post.feature_image_large}')"}
 .row.news-posts
   - @posts.each do |post|
     .col-3
@@ -29,7 +29,7 @@
               = post.title.capitalize
             / Author
             %p
-              Which sunshirt should you choose?
+              = post.summary
 
           .news-card-footer
             %small
