--- a/app/views/news/articles/_sunshirt_showdown.haml
+++ b/app/views/news/articles/_sunshirt_showdown.haml
@@ -10,7 +10,8 @@
 .row
   .col-4
     .img-card
-      %img{src: "https://assets.tackhunter.com/news/EIS_COOL_Shirt.JPG"}
+      %div{style: "height: 300px; overflow:hidden;"}
+        %img{src: "https://assets.tackhunter.com/news/EIS_COOL_Shirt.JPG", style: "width: 100%;", alt: "A picture of me wearing the EIS COOL Shirt.", title: "EIS COOL Shirt"}
       %h3
         EIS COOL Shirt
     %table{style: "margin-top: 0.5em;"}
@@ -31,7 +32,8 @@
           $86
   .col-4
     .img-card
-      %img{src: "https://assets.tackhunter.com/news/Kastel-Denmark-Charlotte-Shirt.jpg"}
+      %div{style: "height: 300px; overflow:hidden;"}
+        %img{src: "https://assets.tackhunter.com/news/Kastel-Denmark-Charlotte-Shirt.jpg", style: "width: 100%;", alt: "A picture of me wearing the Kastel Denmark Charlotte Shirt.", title: "Kastel Denmark Charlotte Shirt"}
       %h3
         Kastel Denmark Charlotte Shirt
     %table{style: "margin-top: 0.5em;"}
@@ -53,7 +55,8 @@
 
   .col-4
     .img-card
-      %img{src: "https://assets.tackhunter.com/news/Tailored-Sportsman-Ice-Fil-Shirt.jpg"}
+      %div{style: "height: 300px; overflow:hidden;"}
+        %img{src: "https://assets.tackhunter.com/news/Tailored-Sportsman-Ice-Fil-Shirt.jpg", style: "width: 100%;", alt: "A picture of me wearing the Tailored Sportsman Ice-Fil Shirt.", title: "Tailored Sportsman Ice-Fil Shirt"}
       %h3
         Tailored Sportsman Ice-Fil Shirt
     %table{style: "margin-top: 0.5em;"}
