--- a/app/views/news/index.haml
+++ b/app/views/news/index.haml
@@ -1,37 +1,38 @@
-= stylesheet_link_tag "blog"
+= stylesheet_link_tag "news_index"
 = content_for :hero do
   .hero-navigation
     .row
       %h1
         Tack Hunter News
-  .feature-post
+  .hero-feature-post
     .row
       .col-12
-        = link_to @featured_post.title.capitalize, news_path(@featured_post), class: "feature-title"
+        = link_to @featured_news_post.title.capitalize, news_path(@featured_news_post), class: "hero-feature-title"
 
     .row
       .col-12
         %h2
           By
-          = @featured_post.author
+          = @featured_news_post.person.username
     .row
       .col-12
-        = link_to "Read Now", news_path(@featured_post), class: "button"
-  .hero-feature-image{style: "background-image: url('#{@featured_post.feature_image_large}')"}
+        = link_to "Read Now", news_path(@featured_news_post), class: "button"
+  .hero-feature-image{style: "background-image: url('#{@featured_news_post.image(:feature)}')"}
 .row.news-posts
-  - @posts.each do |post|
+  - @news_posts.each do |news_post|
     .col-3
       .news-card
-        = link_to news_path(post) do
-          .news-card-image{style: "background-image: url(https://s3.amazonaws.com/assets.tackhunter.com/logos/images/communities/cover_photos/26619/hd_header/AdobeStock_90047375.jpeg)"}
-          .news-card-summary
-            %h4.news-card-title
-              = post.title.capitalize
+        = link_to news_path(news_post) do
+          .news-card-image{style: "background-image: url(#{news_post.image(:medium)})"}
+          .news-card-title
+            %h4
+              = news_post.title.capitalize
             / Author
-            %p
-              = post.summary
+          .news-card-summary 
+            %small
+              = news_post.summary
 
           .news-card-footer
             %small
               By
-              = post.author
+              = news_post.person.username
