--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -11,11 +11,11 @@
         Seller FAQs
       %ul
         %li
-          %a
-            Why Sell On Tack Hunter?
+          = link_to "Why Sell On Tack Hunter?", why_tackhunter_about_path
+            
         %li
           %a
-            Payment & Fees
+            = link_to "Payments & Fees", payments_and_fees_about_path
         %li
           %a
             Shipping
