--- a/app/views/about/payments_and_fees.haml
+++ b/app/views/about/payments_and_fees.haml
@@ -18,14 +18,14 @@
       .col-12
         %h2
           What we charge, and when.
-  .hero-feature-image{style: "background-image: url('https://s3.amazonaws.com/assets.tackhunter.com/marketing/about-page-banner.jpeg')"}
+  .hero-feature-image{style: "background-image: url('https://assets.tackhunter.com/marketing/about-page-banner.jpeg')"}
 .row
   .col-4{style: "text-align: center;"}
     %h1{style: "font-size: 6rem; color: #00a26c;"}
       %i.icon-tag
     %h2
       A 3% fee, only if it sells.
-    %p List as many items as you want for free. If your item sells, we take a 3% cut. That's all there is to it. Buyer didn't like it and wants a refund? We'll refund the fee to them as well. Our goal is to provide a safe and secure marketplace to connect riders and small tack store owners.
+    %p List as many items as you want for free. If your item sells, we take a 3% cut. That's all there is to it. We'll even refund our commision fee if the in the event of a return. Our goal is to provide a safe and secure marketplace that connects riders and small tack store owners.
   .col-4{style: "text-align: center;"}
     %h1{style: "font-size: 6rem; color: #00a26c;"}
       %i.icon-shopping-cart
