--- a/app/views/news/articles/_sunshirt_showdown.haml
+++ b/app/views/news/articles/_sunshirt_showdown.haml
@@ -1,3 +1,4 @@
+- content_for :keywords, "EIS COOL Shirt", "Tailored Sportsman", "Ice-Fil", "Kastel Denmark", "Sun shirt review"
 .row
   %p
     Almost every blogger has done a comparison of the most popular sun shirts on the market, and being 2 steps behind as always, I am no exception. Let's put a personal twist on this:
