--- a/app/views/news/index.haml
+++ b/app/views/news/index.haml
@@ -1,7 +1,7 @@
 = stylesheet_link_tag "news_index"
 - content_for :title, "News, Reviews, and How-to's"
 - content_for :meta_description, "Read tack reviews, saddle reviews, tips & how-to's, and more."
-- content_for :keywords, "Equestrian news", "Equestrian blog", "Horse blog"
+- content_for :keywords, "Equestrian news,Equestrian blog,Horse blog"
 = content_for :hero do
   .hero-navigation
     .row
