--- a/app/views/news/articles/_how_much_truck_do_you_need.haml
+++ b/app/views/news/articles/_how_much_truck_do_you_need.haml
@@ -1,9 +1,5 @@
-= javascript_include_tag "angular"
-= javascript_include_tag "angular-toggle-switch.min.js"
-= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/angularjs-slider/5.5.1/rzslider.min.js"
-= stylesheet_link_tag "https://cdnjs.cloudflare.com/ajax/libs/angularjs-slider/5.5.1/rzslider.min.css"
-= stylesheet_link_tag "angular-toggle-switch"
-= stylesheet_link_tag "angular-toggle-switch-bootstrap"
+= javascript_include_tag 'custom_news_scripts/how_much_truck'
+= stylesheet_link_tag 'custom_news_styles/how_much_truck'
 .row
   %p I recently started looking for a truck that was capable of towing my horses around. I quickly found myself overwhelmed with tons of confusing terminology. There had to be a simpler way. After doing a ton of research, I made a tool that everyone can use to save time when truck shopping. Keep in mind that driving an overloaded vehicle is not only dangerous for you and your horses, but it also is a financial liability (it's unlikely that your insurance will cover a crash that resulted from exceeding your car manufacturer’s limits).
 
